Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16871

in_predicate_conversion_threshold cannot be set in my.cnf

    XMLWordPrintable

Details

    Description

      Currently testing 10.3.6 but looking at code this is still true in current 10.3.

      Any setting of in_predicate_conversion_threshold in my.cnf is overridden in init_common_variables() with this line:

        global_system_variables.in_subquery_conversion_threshold= IN_SUBQUERY_CONVERSION_THRESHOLD;
      

      Removing this line appears to fix the problem. A default is set in sys_vars.cc anyway I don't think this is needed.

      This affects ColumnStore because we need to set this high.

      As a side note, I couldn't see this variable documented in KB.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              LinuxJedi Andrew Hutchings (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.