MDEV-16871 in_predicate_conversion_threshold cannot be set in my.cnf